--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -129,7 +129,7 @@ script_includes:
   <script src="https://utteranc.es/client.js"
           repo="Kyuubi0323/Kyuubi0323.github.io"
           issue-term="pathname"
-          theme="github-light"
+          theme="preferred-color-scheme"
           crossorigin="anonymous"
           async>
   </script>
