_mod colour comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -131,7 +131,7 @@ tail_includes:
   <script src="https://utteranc.es/client.js"
           repo="Kyuubi0323/Kyuubi0323.github.io"
           issue-term="pathname"
-          theme="preferred-color-scheme"
+          theme="github-dark"
           crossorigin="anonymous"
           async>
   </script>
